<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.adityaoo7.sherlock.addedit.AddEditViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        tools:context=".addedit.AddEditFragment">

        <EditText
            android:id="@+id/account_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/account_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.name}"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/user_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.userName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_name_edit_text" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toStartOf="@+id/toggle_view_password_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text" />

        <ImageView
            android:id="@+id/toggle_view_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/toggle_view_password_content_description"
            android:src="@drawable/ic_baseline_remove_red_eye_24"
            app:layout_constraintBottom_toBottomOf="@+id/password_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/password_edit_text"
            app:layout_constraintTop_toTopOf="@+id/password_edit_text" />

        <EditText
            android:id="@+id/uri_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/url_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:text="@={viewModel.uri}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

        <EditText
            android:id="@+id/note_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/note_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={viewModel.note}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uri_edit_text" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/save_account_content_description"
            android:onClick="@{()-> viewModel.saveAccount()}"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_outline_save_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>