<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.adityaoo7.sherlock.detail.AccountDetailViewModel" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:transitionName="@string/account_detail_transition">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/account_details_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".detail.AccountDetailFragment">

            <TextView
                android:id="@+id/account_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.account.name}"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Account Name" />

            <TextView
                android:id="@+id/user_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@{viewModel.account.userName}"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toStartOf="@+id/user_name_copy_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_name_text_view"
                tools:text="User Name" />

            <ImageView
                android:id="@+id/user_name_copy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/copy_user_name_content_description"
                android:src="@drawable/ic_baseline_content_copy_24"
                app:layout_constraintBottom_toBottomOf="@+id/user_name_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/user_name_text_view"
                app:layout_constraintTop_toTopOf="@+id/user_name_text_view" />

            <TextView
                android:id="@+id/password_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@{viewModel.account.password}"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toStartOf="@+id/password_copy_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name_text_view"
                tools:text="Password@123" />

            <ImageView
                android:id="@+id/password_copy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/copy_password_content_description"
                android:src="@drawable/ic_baseline_content_copy_24"
                app:layout_constraintBottom_toBottomOf="@+id/password_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/password_text_view"
                app:layout_constraintTop_toTopOf="@+id/password_text_view" />

            <View
                android:id="@+id/divider"
                style="@style/Divider"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text_view" />

            <TextView
                android:id="@+id/uri_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@{viewModel.account.uri}"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintEnd_toStartOf="@+id/open_url_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:text="https://www.accounturi.com" />

            <ImageView
                android:id="@+id/open_url_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/open_url_content_description"
                android:src="@drawable/ic_baseline_double_arrow_24"
                app:layout_constraintBottom_toBottomOf="@+id/uri_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/uri_text_view"
                app:layout_constraintTop_toTopOf="@+id/uri_text_view" />

            <View
                android:id="@+id/divider_2"
                style="@style/Divider"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uri_text_view" />

            <TextView
                android:id="@+id/note_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.account.note}"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_2"
                tools:text="Lorem ipsum dolor sit amet, consectetur elit consequat." />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/delete_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/delete_account_content_description"
                android:onClick="@{()-> viewModel.deleteThisAccount()}"
                android:src="@drawable/ic_baseline_delete_24"
                app:fabSize="normal"
                app:layout_constraintBottom_toTopOf="@+id/edit_account_button"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/edit_account_content_description"
                android:onClick="@{()-> viewModel.editAccount()}"
                android:src="@drawable/ic_baseline_edit_24"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading_account_details_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/account_detail_loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/account_detail_loading_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loading_account_details_text"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_detail_loading" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>