<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reset_password"
        android:title="@string/reset_password_menu_item"
        app:showAsAction="ifRoom" />
</menu>